--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "cdbreact": "^1.3.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
