--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.3.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
