--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
-    "apollo-server-express": "^3.6.3"
+    "apollo-server-express": "^3.6.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
